--- a/EXE/Settings.ini
+++ b/EXE/Settings.ini
@@ -1,7 +1,10 @@
 [ComPort]
-NumberPort = 4
+NumberPort = 6
 PortSettings = 57600,N,8,1
 
 [Local]
 IP_Address = 192.168.1.128
 Port = 7000
+
+[PrgSet]
+Log = 0
