--- a/Settings.ini
+++ b/Settings.ini
@@ -1,5 +1,5 @@
 [ComPort]
-NumberPort = 6
+NumberPort = 4
 PortSettings = 57600,N,8,1
 
 [Local]
@@ -7,4 +7,7 @@ IP_Address = 192.168.1.128
 Port = 7000
 
 [PrgSet]
+Online = 0
 Log = 0
+CountPor = 1
+CamList = 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16
