--- a/EXE/Settings.ini
+++ b/EXE/Settings.ini
@@ -7,7 +7,8 @@ IP_Address = 192.168.1.128
 Port = 7000
 
 [PrgSet]
-Online = 0
-Log = 0
-CountPor = 1
-CamList = 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16
+StartUpPosition = 1
+ConnectToServer = 1
+CreateLogFile = 0
+CountSpan = 1
+CellList = 1,2,3,4,5,6,7,8
